<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="124dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="126dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imageView2"
        android:contentDescription="@string/bank"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/editUser"
        app:layout_constraintEnd_toEndOf="@+id/editUser"
        app:layout_constraintStart_toStartOf="@+id/editUser">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="202dp"
        android:layout_height="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:text="@string/login"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/btnLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>