<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B49EE">

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" app:layout_constraintGuide_begin="18dp" android:id="@+id/guideline_start"/>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/guideline_end" app:layout_constraintGuide_end="13dp"/>

    <TextView
        android:id="@+id/txtnome"
        style="@style/fontResult"
        android:layout_width="215dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/helvetica_neue_light"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@mipmap/logout"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/lblConta"
        style="@style/fontTitle"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/helvetica_neue"
        android:text="@string/conta"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/txtnome" />

    <TextView
        android:id="@+id/txtConta"
        style="@style/fontResult"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/lblConta" />

    <TextView
        android:id="@+id/lblSaldo"
        style="@style/fontTitle"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/saldo"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/txtConta" />

    <TextView
        android:id="@+id/txtSaldo"
        style="@style/fontResult"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/lblSaldo" />

    <TextView
        android:id="@+id/lblRecentes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="18dp"
        android:paddingTop="31dp"
        android:paddingBottom="8dp"
        android:text="@string/recentes"
        android:textColor="#485465"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaldo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecentes"
        tools:listitem="@layout/details_item" />

    <ProgressBar
        android:id="@+id/detalhe_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="33dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>